# AIResumeAnalyzer

./: .env.example  .gitignore  README.md
backend/: .gitignore  pyproject.toml  render.yaml  requirements.txt
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: ai.py
backend/app/services/: ai_coach.py
backend/tests/: conftest.py  test_api.py
frontend/: app.js  index.html  settings.html  settings.js  styles.css
