[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "numpy==2.3.3",
    "openai==1.108.0",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.13.4",
    "pypdf==6.11.0",
    "pytest==8.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.28",
    "sqlalchemy==2.0.43",
    "uvicorn==0.46.0",
]
